--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   sqlite3:
-    image: nouchka/sqlite3:latest
+    image: keinos/sqlite3:3.38.2
     container_name: sqlite3
     stdin_open: true
     tty: true
